# pls_travels_webapp

./: .gitignore  .replit  DEPLOYMENT_GUIDE.md  LAUNCH_CHECKLIST.md  PLAY_STORE_REQUIREMENTS.md  PLAY_STORE_SECRETS.md  README_GITHUB_SETUP.md  README_TESTING.md  SECURITY_ADVISORY.md  Uber_Fleet_API_Access_Request.md  admin_routes.py  api_tracking_routes.py  app.py  app_storage.py  auth.py  bitrise.yml  cookies.txt  database_commands.py  deploy-playstore.sh  driver_routes.py  driver_test.txt  fallback_tests.py  firebase-instructions.md  firebase_service.py  forms.py  fresh_session.txt  google_auth.py  launch-playstore.sh  main.py  manager_routes.py  mobile_api.py  mobile_api_extensions.py  mobile_auth.py  models.py  otp_routes.py  otp_service.py  package-lock.json  package.json  playwright.config.py  playwright_instructions.md  (+25 more)
android/: PERFORMANCE_OPTIMIZATION_SUMMARY.md  SECURITY_IMPLEMENTATION.md  TEST_SUITE_DOCUMENTATION.md  build.gradle
android_app/: .gitignore  build.gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle
attached_assets/: Pasted--API-GET-Driver-Info-Privileged-and-Confidential-This-endpoint-design-has-been-confidentially-shar-1757189598792_1757189598793.txt  Pasted--API-Get-Driver-Payments-Privileged-and-Confidential-This-endpoint-design-has-been-confidentially--1757189726549_1757189726549.txt  Pasted--API-Get-Drivers-Information-Privileged-and-Confidential-This-endpoint-design-has-been-confidentia-1757189642800_1757189642800.txt  Pasted--API-Get-Realtime-Transactions-Privileged-and-Confidential-This-endpoint-design-has-been-confident-1757189801999_1757189802000.txt  Pasted-2025-09-04-20-41-36-31-4aa288f0-User-return-self-exec-single-context-2025-09-04-20-41-36-31-4-1756999769089_1756999769090.txt  Pasted-2025-09-09-01-25-08-60-9eb594bd-User-raise-rewrite-traceback-stack-source-source-2025-09-09-01--1757367839805_1757367839806.txt  Pasted-2025-09-15-07-48-48-16-614306da-User-2025-09-15-02-18-48-0000-25-INFO-Listening-at-http--1757924996273_1757924996274.txt  Pasted-2025-09-16T07-59-41Z-info-Deployment-641d3ecc-2d84-4ed8-a41a-7c505d506dce-2025-09-16T07-59-41Z-inf-1758010150984_1758010150987.txt  Pasted-2025-09-19-10-00-09-46-89820c46-User-File-home-runner-workspace-pythonlibs-lib-python3-11-site-1758256320560_1758256320562.txt  Pasted-2025-09-19T02-36-23Z-info-Deployment-641d3ecc-2d84-4ed8-a41a-7c505d506dce-2025-09-19T02-36-23Z-inf-1758251097496_1758251097498.txt  Pasted-2025-09-19T03-07-11Z-info-Deployment-641d3ecc-2d84-4ed8-a41a-7c505d506dce-2025-09-19T03-07-11Z-inf-1758251515764_1758251515766.txt  Pasted-Create-a-Node-js-Repl-Install-Playwright-npm-init-y-npm-install-playwright-test-npx-playwright--1757364499241_1757364499242.txt  Pasted-Getting-Access-Token-To-obtain-an-Access-Token-using-the-Client-Credentials-grant-type-three-ess-1757194300560_1757194300561.txt  Pasted-Got-it-You-want-the-salary-schemes-implemented-in-Python-app-style-Here-s-a-clean-data-driven-ve-1757260110266_1757260110266.txt  Pasted-Perfect-Since-you-said-ok-here-are-the-ready-to-use-files-code-you-can-just-copy-paste-1757568992536_1757568992537.txt  Pasted-Perfect-let-me-give-you-a-detailed-end-to-end-full-app-overview-of-your-upgraded-PLS-TRA-1756994617698_1756994617699.txt  Pasted-Your-application-currently-does-not-have-access-to-Authorization-Code-scopes-Please-contact-your-Ub-1757195083709_1757195083710.txt  Pasted-from-flask-import-Flask-request-jsonify-app-Flask-name-def-calculate-tripsheet-row--1756997410337_1756997410365.txt  Pasted-import-useState-from-react-import-Phone-MessageCircle-Send-CheckCircle-Car-DollarSign--1757568026520_1757568026522.txt  build.gradle  content-1758041173795.md  pls_travels_landing_1757568034341.jsx  pls_travels_landing_1757568084555.jsx
instance/: pls_travels.db  pls_travels_dev.db
play_store_assets/: app_store_listing.md  asset_specifications.md  data_safety.md  privacy_policy.md
scripts/: auto-deploy.sh  bitrise-upload.sh
server/: index.ts  routes.ts  storage.ts
services/: __init__.py  audit_service.py  driver_service.py  duty_service.py  file_service.py  logging_service.py  notification_service.py  reporting_service.py  transaction_helper.py  vehicle_service.py
shared/: schema.ts
static/: robots.txt
(+327 files in other folders)
