[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask-login>=0.6.3",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-wtf>=1.2.2",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
    "replit-object-storage>=1.0.2",
    "requests>=2.32.5",
    "python-dotenv>=1.1.1",
    "celery>=5.5.3",
    "schedule>=1.2.2",
    "twilio>=9.8.0",
    "replit>=4.1.2",
    "oauthlib>=3.3.1",
    "flask-dance>=7.1.0",
    "pyjwt>=2.10.1",
    "pytest-playwright>=0.7.1",
    "pytest>=8.4.2",
]
